:green_heart:  workflow 수정 & docker 파일 수정